--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,2 @@
 - Deploy to AWS: https://scotch.io/tutorials/deploying-a-mean-app-to-amazon-ec2-part-1
+- User Authentication - https://www.sitepoint.com/user-authentication-mean-stack/
