--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@ Todo:
 
 Resources:
 	- Bootstrap themes - https://bootswatch.com/
+	- angular alerts service - http://jasonwatmore.com/post/2017/06/25/angular-2-4-alert-toaster-notifications
 	- Deploy to AWS: https://scotch.io/tutorials/deploying-a-mean-app-to-amazon-ec2-part-1
 	- User Authentication - https://www.sitepoint.com/user-authentication-mean-stack/
 	- improve image upload security - https://github.com/expressjs/multer/issues/170
